--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -26,267 +26,173 @@
 
 <DietLandingPage>:
 
-    BoxLayout:
-        orientation: 'vertical'
-        MyActionBar:
-            title:diet_toolbar_title
+	BoxLayout:
+		orientation: 'vertical'
+		MyActionBar:
+			title:diet_toolbar_title
 
-        Widget:
-            size_hint_y:0.3
-        Label:
-            text: diet_landing_blurb
-            color: TXT_COLOR
-            font_size:'14sp'
-            halign: 'left'
-            size_hint_x:0.8
-            pos_hint:{'center_x':0.5}
+		Widget:
+			size_hint_y:0.3
+		Label:
+			text: diet_landing_blurb
+			color: TXT_COLOR
+			font_size:'14sp'
+			halign: 'left'
+			size_hint_x:0.8
+			pos_hint:{'center_x':0.5}
 
-        Label:
-            # font_size:'2xw0sp'
-            text: diet_landing_subtitle
-            # text_color:DARK_BLUE
-            color: TXT_COLOR
-            theme_text_color:"Hint"
-            halign: 'left'
-            size_hint_x:0.8
-            # size_hint_x:0.5
-            pos_hint:{'center_x':0.5}
+		Label:
+			# font_size:'2xw0sp'
+			text: diet_landing_subtitle
+			# text_color:DARK_BLUE
+			color: TXT_COLOR
+			theme_text_color:"Hint"
+			halign: 'left'
+			size_hint_x:0.8
+			# size_hint_x:0.5
+			pos_hint:{'center_x':0.5}
 
-        MyButton2:
-            text:"Begin"
-            # font_style:'Button'
-            # # size_hint_x:0.7
-            # pos_hint:{'center_x':0.5}
-            on_release:root.arrow_right()
+		MyButton2:
+			text:"Begin"
+			# font_style:'Button'
+			# # size_hint_x:0.7
+			# pos_hint:{'center_x':0.5}
+			on_release:root.arrow_right()
 
 
-        NavButtons
+		NavButtons
 
 
 <DietAndFoodPage>:
 
-    BoxLayout:
-        orientation: 'vertical'
-        MyActionBar:
-            title:diet_toolbar_title
-
-        # BoxLayout:
-        #     size_hint_y:0.7
-
-            # # MDTabs:
-            #     id: android_tabs
-            #     tab_pos:'left_top'
-            #     on_tab_switch: root.on_tab_switch(*args)
-
-            #     Tab:
-            #         icon:'blank'
-            #         text:'1'
-            #         BoxLayout:
-            #             orientation:'vertical'
-
-            #             Label:
-            #                 text: diet_Q1
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-
-            #     Tab:
-            #         icon:'blank'
-            #         text:'2'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q2
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'3'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q3
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'4'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q4
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'5'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q5
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'6'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q6
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'7'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q7
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-
-            #     Tab:
-            #         icon:'blank'
-            #         text:'8'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q8
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'9'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q9
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'10'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q10
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-            #     Tab:
-            #         icon:'blank'
-            #         text:'11'
-            #         BoxLayout:
-            #             orientation:'vertical'
-            #             Label:
-            #                 text: diet_Q11
-            #                 halign: 'center'
-            #                 size_hint_x:0.9
-
-        GridLayout:
-            cols:3
-            # rows:4
-
-            on_parent:
-                for i in range(0,8): txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.button_press))
-
-        NavButtons
+	BoxLayout:
+		orientation: 'vertical'
+		MyActionBar:
+			title:diet_toolbar_title
 
 
+		# BoxLayout:
+		# 	size_hint_y:0.6
+		# 	orientation:'vertical'
+		# 	pos_hint:{'center_x':0.5}
 
-    FloatLayout:
-        orientation: 'vertical'
-        Label:
-            pos:(50,950)
-            text: diet_Q0
-            color: TXT_COLOR
-            # md_bg_color:0,0,1,0.05
-            size_hint_y:0.15
-            size_hint_x:0.9
-            text_color:1,1,1,1
+		# 	Label:
+		# 		size_hint_x:0.8
+		# 		id:label1
+		# 		text_size: root.width*self.size_hint_x, None
+		# 		size: self.texture_size
+		# 		color: TXT_COLOR
+		# 		text:diet_Q0
+		# 		halign:'center'
+		# 		pos_hint:{'center_x':0.5}
+
+		# 	# BoxLayout:
+		# 	Label:
+		# 		size_hint_x:0.8
+		# 		# size_hint_y:0.6
+		# 		id:air_pollution_q_label
+		# 		text_size: root.width*self.size_hint_x, None
+		# 		color: TXT_COLOR
+		# 		size: self.texture_size
+		# 		text: diet_Q1
+		# 		halign:'center'
+		# 		pos_hint:{'center_x':0.5,'center_y':0.3}
+
+
+		GridLayout:
+			cols:3
+			# rows:4
+
+			on_parent:
+				for i in range(0,8): txt = "{0}".format(i); self.add_widget(button.Button(text = txt,on_release=root.button_press))
+
+		NavButtons
+
 
 
 <Template>:
-    Label:
-        text: 'Your score is:'
-        halign: 'center'
+	Label:
+		text: 'Your score is:'
+		halign: 'center'
 
-    Label:
-        id:score_label
-        text: ''
-        halign: 'center'
+	Label:
+		id:score_label
+		text: ''
+		halign: 'center'
 
-    Button:
-        id:restart_button
-        text:'Try Again'
-        font_style:'Button'
-        size_hint_x:0.7
-        pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-        on_release:root.reset_quiz()
-    Widget:
-        size_hint_y:0.05
-    Button:
-        id:next_section
-        text:'Back'
-        font_style:'Button'
-        size_hint_x:0.7
-        pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-        on_release:root.chevron_left()
-    Widget:
-        size_hint_y:0.05
-    Button:
-        id:next_section
-        text:'Next'
-        font_style:'Button'
-        size_hint_x:0.7
-        pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-        on_release:root.arrow_right()
+	Button:
+		id:restart_button
+		text:'Try Again'
+		font_style:'Button'
+		size_hint_x:0.7
+		pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+		on_release:root.reset_quiz()
+	Widget:
+		size_hint_y:0.05
+	Button:
+		id:next_section
+		text:'Back'
+		font_style:'Button'
+		size_hint_x:0.7
+		pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+		on_release:root.chevron_left()
+	Widget:
+		size_hint_y:0.05
+	Button:
+		id:next_section
+		text:'Next'
+		font_style:'Button'
+		size_hint_x:0.7
+		pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+		on_release:root.arrow_right()
 
 
-    Label:
-        size_hint_y:0.7
+	Label:
+		size_hint_y:0.7
 
 <DietScorePage>:
-    score_label:score_label
-    BoxLayout:
-        orientation: 'vertical'
-        MyActionBar:
-            title:diet_toolbar_title
+	score_label:score_label
+	BoxLayout:
+		orientation: 'vertical'
+		MyActionBar:
+			title:diet_toolbar_title
 
-        Label:
-            text: 'Your score is:'
-            color: TXT_COLOR
-            halign: 'center'
+		Label:
+			text: 'Your score is:'
+			color: TXT_COLOR
+			halign: 'center'
 
-        Label:
-            id:score_label
-            color: TXT_COLOR
-            text: ''
-            halign: 'center'
+		Label:
+			id:score_label
+			color: TXT_COLOR
+			text: ''
+			halign: 'center'
 
-        MyButton2:
-            text:'Try Again'
-            on_release:root.reset_quiz()
-        Widget:
-            size_hint_y:0.05
-        MyButton2:
-            # id:next_section
-            text:'Back'
-            # font_style:'Button'
-            # size_hint_x:0.7
-            # pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.chevron_left()
-        Widget:
-            size_hint_y:0.05
-        MyButton2:
-            # id:next_section
-            text:'Next'
-            # font_style:'Button'
-            # size_hint_x:0.7
-            # pos_hint:{'center_x': 0.5, 'center_y': 0.5}
-            on_release:root.arrow_right()
-
-
-        Label:
-            size_hint_y:0.7
+		MyButton2:
+			text:'Try Again'
+			on_release:root.reset_quiz()
+		Widget:
+			size_hint_y:0.05
+		MyButton2:
+			# id:next_section
+			text:'Back'
+			# font_style:'Button'
+			# size_hint_x:0.7
+			# pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+			on_release:root.chevron_left()
+		Widget:
+			size_hint_y:0.05
+		MyButton2:
+			# id:next_section
+			text:'Next'
+			# font_style:'Button'
+			# size_hint_x:0.7
+			# pos_hint:{'center_x': 0.5, 'center_y': 0.5}
+			on_release:root.arrow_right()
 
 
-        NavButtons
+		Label:
+			size_hint_y:0.7
+
+
+		NavButtons
