location, diet&foodpage now functional

--- a/layout_files/DietAndFood.kv
+++ b/layout_files/DietAndFood.kv
@@ -71,6 +71,34 @@
 			title:diet_toolbar_title
 
 
+		BoxLayout:
+
+		    orientation:'vertical'
+		    size_hint_y:0.6
+		    pos_hint:{'center_x':0.5}
+
+		    Label:
+		        size_hint_x:0.8
+		        id:label1
+		        text_size: root.width*self.size_hint_x, None
+		        size: self.texture_size
+		        color: TXT_COLOR
+		        text:diet_Q0
+		        halign:'center'
+		        pos_hint:{'center_x':0.5}
+
+		    # BoxLayout:
+		    Label:
+		        size_hint_x:0.8
+		        # size_hint_y:0.6
+		        id:q_label
+		        text_size: root.width*self.size_hint_x, None
+		        color: TXT_COLOR
+		        size: self.texture_size
+		        text:""
+		        halign:'center'
+		        pos_hint:{'center_x':0.5,'center_y':0.3}
+
 		# BoxLayout:
 		# 	size_hint_y:0.6
 		# 	orientation:'vertical'
