--- a/layout_files/templates.kv
+++ b/layout_files/templates.kv
@@ -17,7 +17,7 @@
                 text_size: root.width*self.size_hint_x, None
                 size: self.texture_size
                 color: TXT_COLOR
-                text:"label1"
+                text:""
                 halign:'center'
                 pos_hint:{'center_x':0.5}
 
